# booking-platform

./: README.md
backend/: Cargo.toml
backend/src/: db.rs  handlers.rs  main.rs  models.rs
database/: schema.sql
database/migrations/: 001_add_booker_to_bookings.sql  002_add_organizations.sql  003_add_service_rules.sql
frontend/: package.json
frontend/src/: App.js
frontend/src/components/: AvailabilitySearch.js  DocumentPreview.js  HomePage.js  ServiceSearch.js  VoiceBooking.js
microservices/clinician-search/: Cargo.toml
microservices/clinician-search/src/: db.rs  handlers.rs  main.rs  models.rs
microservices/document-service/: Cargo.toml
microservices/document-service/src/: main.rs
